# FlexipodFast

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  RecvMsgpack.cpp  conda_env.yml  energy test result.xlsx  energy_test_result.xlsx  run_flexipod.bat
data/urdf/: test_collision.py  test_robot.py
data/urdf/12dof/: robot.urdf
data/urdf/test/: robot.urdf
mesh/: cube_10mm.stl  leg_simplified.msh  leg_simplified.step  mainbody_v2_simplified.stl  mainbody_v2_simplified_filled.stl  soft_body_simplified.msh  soft_body_simplified.step  soft_body_v2_simplified.stl  soft_body_v2_simplified_filled.stl
mesh/4dof/: leg_simplified.msh  robot.pickle  soft_body_simplified.msh
mesh/v10/: body.ipt  body.msh  body.step  body.stl  hip.ipt  hip.step  knee.ipt  knee.msh  knee.step  knee.stl  parts.pickle  robot.iam  shank_back.ipt  shank_back.msh  shank_back.step  shank_back.stl  shank_back_mirror.ipt  shank_front.ipt  shank_front.stl  thigh.ipt  thigh.msh  thigh.step  thigh.stl
mesh/v5.0/: Simulation_module.iam  back_hip.msh  body.msh  front_hip.msh  lockfile.lck  shank.ipt  shank.msh  shank.step  thigh.msh
mesh/v6.0/: body.msh  body.step  hip.msh  hip_back.msh  hip_back.step  hip_back_mirror.msh  hip_back_mirror.step  hip_mirror.msh  shank.msh  shank.step  thigh.msh  thigh.step
mesh/v7.0/: body.ipt  body.msh  body.step  hip.ipt  hip.msh  hip.step  hip_back.ipt  hip_back.msh  hip_back.step  hip_back_mirror.ipt  hip_back_mirror.msh  hip_back_mirror.step  robot.iam  shank.msh  shank.step  shank_2.ipt  shank_back.msh  shank_back.step  shank_front.ipt  shank_front.msh  shank_front.step  shank_mirror.msh  shank_mirror.step  thigh.ipt  thigh.msh  thigh.step
mesh/v7.0/OldVersions/: body.0010.ipt  hip_back.0012.ipt  hip_back_mirror.0006.ipt  hip_back_mirror.0008.ipt  robot.0009.iam  robot.0010.iam  robot.0011.iam  robot.0020.iam  robot.0023.iam  shank_2.0004.ipt  shank_2.0006.ipt  thigh.0011.ipt
mesh/v8.0/: body.ipt  body.msh  body.step  hip.ipt  hip.msh  hip.step  hip_back.msh  hip_back_mirror.msh  robot.iam  shank_2.ipt  shank_back.msh  shank_back.step  shank_front.ipt  shank_front.msh  shank_front.step  thigh.ipt  thigh.msh  thigh.step
mesh/v8.0/OldVersions/: body.0011.ipt  hip.0007.ipt  robot.0033.iam  shank_front.0014.ipt
mesh/v9.0/: body.ipt  body.msh  body.step  body.stl  hip.ipt  hip.msh  hip.step  hip.stl  hip_back.msh  parts.pickle  robot.iam  robot.pickle  schematics.ipt  shank_2.ipt  shank_back.ipt  shank_back.msh  shank_back.step  shank_back.stl  shank_back_mirror.ipt  shank_back_right.msh  shank_front.ipt  shank_front.msh  shank_front.step  shank_front.stl  shank_right.ipt  thigh.ipt  thigh.msh  thigh.step  thigh.stl  v9.ipj
robot/4dof/: robot.pickle
robot/4dof/mesh/: leg_simplified.msh  leg_simplified.step  robot.pickle  soft_body_simplified.msh
robot/4dof/urdf/: robot.urdf
robot/v10/: parts.pickle  robot.pickle
robot/v10/mesh/: body.step  hip.stl  knee.msh  knee.step  robot.iam  shank_back.ipt  shank_back.msh  shank_front.msh  shank_front.step  thigh.ipt
robot/v10/urdf/: robot.urdf
robot/v11/: parts.pickle  robot.pickle
robot/v11/mesh/: body.ipt  body.msh  body.step  body.stl  hip.ipt  hip.msh  hip_back.ipt  hip_back.msh  hip_back.step  hip_back.stl  knee.ipt  knee.msh  knee.step  knee.stl  robot.iam  shank_back.ipt  shank_back.msh  shank_back.step  shank_back.stl  shank_back_mirror.ipt  shank_front.ipt  shank_front.msh  thigh.ipt  thigh.msh  thigh.step
robot/v11/urdf/: robot.urdf
robot/v9/: parts.pickle  robot.pickle
robot/v9/mesh/: body.ipt  body.msh  body.step  body.stl  hip.msh  robot.iam  shank_back.ipt  shank_back.msh  shank_back.step  shank_back.stl  shank_back_mirror.ipt  shank_right.ipt
robot/v9/urdf/: robot.urdf
runs/2021-04-20_10-01-24_SAC_HalfCheetah-v2_Gaussian_/: events.out.tfevents.1618927284.DESKTOP-U1TDMTA.22752.0
src/: async_reduce.cu  comonUtils.cpp  comonUtils.h  data.msgpack  flexipod_12dof.msgpack  flexipod_12dof_v10.msgpack  flexipod_4dof.msgpack  flexipod_control.ipynb  learn_dynamics.ipynb  main.cpp  main.cu  mathTest.cu  network.cpp  network.h  object.cu  object.h  shader.cpp  shader.h  shaderFragment.glsl  shaderVertex.glsl  shadow_mapping_depth_fragment.glsl  shadow_mapping_depth_vertex.glsl  sim.cpp  sim.cu  sim.h  simple_cpp_sockets.h  simple_cpp_sockets_test.cpp  slicer.ipynb  temp.ipynb  testNetwork.cpp  testNetwork.cu  testjson.cu  testjsonHeader.cpp  testjsonHeader.h  vec.cu  vec.h  walking_trot.ipynb
src/.ipynb_checkpoints/: flexipod_control-checkpoint.ipynb  slicer-checkpoint.ipynb
src/py_src/: Untitled.ipynb  flexipod_demo.ipynb  flexipod_env.py  flexipod_real_env.py  learn_gaits.ipynb  phase_indication.py  robot_utils.py  slicer.ipynb  slicer_include_motor-v10.ipynb  slicer_include_motor-v11.ipynb  slicer_include_motor-v9.ipynb  stand_control_ppo.ipynb  temp.ipynb  temp_playground.ipynb  test_ppo.py  test_steps.py  train.py  train.yaml  udp_server.py
src/py_src/ppo/: PPO_continuous.py
src/py_src/real_env/: physical_env.py  pulley_control.py
src/python/: flexipod_control.ipynb  flexipod_dataset.py  flexipod_env.py  imgui.ini  plot.ipynb  robot_utils.py  run_flexipod.bat  slicer-backup.ipynb  slicer.ipynb  slicer_include_motor-Copy1.ipynb  slicer_include_motor-v7.ipynb  slicer_include_motor-v8.ipynb  slicer_include_motor-v9.ipynb  slicer_include_motor.ipynb  stand_control.ipynb  stand_control_ppo.ipynb  temp.ipynb  test_ppo.py  test_sac.py
src/python/ddpg/: __init__.py  ddpg.py  models.py  utils.py
src/python/ppo/: PPO_continuous.py
src/python_src/: flexipod_env.py  run_flexipod.bat  sac.py  simple_tester.py  slicer.ipynb  train.yaml
src/python_src/ppo/: PPO_continuous.py
src/shader/: shaderFragment.glsl  shaderVertex.glsl  shadow_mapping_depth_fragment.glsl  shadow_mapping_depth_vertex.glsl
